[package]
name = "toshokan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip ={ version = "0.6.4", features = ["aes-crypto", "bzip2", "deflate"], default-features = false }
tiny_http = "0.12"
walkdir = "2"
serde =  { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }